# itmo-masters-chatbot

./: LICENSE  README.md  example_config.json  main.py  pyproject.toml
parser_utils /: html_parser.py  pdf_to_df_parser.py
src/adapter/config/: config.py
src/adapter/config/exceptions/: config.py
src/adapter/logging/: logging.py
src/adapter/model/: model.py
src/adapter/telegram/: bot.py
src/adapter/telegram/handlers/: ai.py  ai_product.py  start.py
